--- a/voyages/voyage1.html
+++ b/voyages/voyage1.html
@@ -18,10 +18,9 @@
                 <a href="javascript:void(0)" class="drop1">Nos voyages</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu1">
-                    <a href="">a</a>
-                    <a href="">b</a>
-                    <a href="">c</a>
-                    <a href="">d</a>
+                    <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
+                    <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
+                    <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
     
@@ -29,10 +28,9 @@
                 <a href="javascript:void(0)" class="drop2">Nos rêves</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu2">
-                    <a href="">a</a>
-                    <a href="">b</a>
-                    <a href="">c</a>
-                    <a href="">d</a>
+                    <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
+                    <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
+                    <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
         </ul>
