--- a/voyages/voyage3.html
+++ b/voyages/voyage3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Australie</title>
-    <link rel="stylesheet" href="/Users/GMNTh/OneDrive/Documents/voyage3.css">
+    <link rel="stylesheet" href="../css/voyage3.css">
 </head>
 <body>
      <!--header-->
