modification chemin et image

--- a/voyages/voyage2.html
+++ b/voyages/voyage2.html
@@ -76,7 +76,7 @@ Le meilleur hôtel à Essaouira : le Jardin des Douars
     <img src="../images/Jardin-des-Douars-7.jpg" alt="">
     <img src="../images/Jardin-des-Douars.jpg" alt="">
     <img src="../images/la-table-de-Madada-Essaouira.jpg" alt="">
-    <img src="../images/marché-aux-poissons-Essaouira.jpg" alt="">
+    <img src="../images/marche╠ü-aux-poissons-Essaouira.jpg" alt="">
     <img src="../images/port-Essaouira.jpg" alt="">
     <img src="../images/port.jpg" alt="">
     <img src="../images/Voyage-Essaouira-bleue.jpg" alt="">
