modification chemin html voyage

--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
       <li class="europe" style="float:left">
         <a href="javascript:void(0)" class="europe1">Europe</a>
         <div class="contenu-europe">
-          <a href="voyage6.html">Islande</a>
+          <a href="../voyages/voyages/voyage6.html">Islande</a>
         </div>
       </li>
       <li class="afrique" style="float:left">
         <a href="javascript:void(0)" class="afrique1">Afrique</a>
         <div class="contenu-afrique">
-          <a href="voyage2.html">Maroc</a>
+          <a href="../voyages/voyages/voyage2.html">Maroc</a>
         </div>
       </li>
       <li class="amerique" style="float:left">
         <a href="javascript:void(0)" class="amerique1">Amérique</a>
         <div class="contenu-amerique">
-          <a href="voyage5.html">Mexique</a>
+          <a href="../voyages/voyages/voyage5.html">Mexique</a>
         </div>
       </li>
       <li class="asie" style="float:left">
         <a href="javascript:void(0)" class="asie1">Asie</a>
         <div class="contenu-asie">
-          <a href="voyage4.html">Maldives</a>
-          <a href="voyage1.html">Thaïlande</a>
+          <a href="../voyages/voyages/voyage4.html">Maldives</a>
+          <a href="../voyages/voyages/voyage1.html">Thaïlande</a>
         </div>
       </li>
       <li class="oceanie" style="float:left">
         <a href="javascript:void(0)" class="oceanie1">Océanie</a>
         <div class="contenu-oceanie">
-          <a href="voyage3.html">Australie</a>
+          <a href="../voyages/voyages/voyage3.html">Australie</a>
         </div>
       </li>
       <li class="deroulant1" style="float:right">
