--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
       <li class="deroulant1" style="float:right">
         <a href="javascript:void(0)" class="drop1">Nos voyages</a>
         <div class="contenu-menu1">
-          <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
-          <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
-          <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
+          <a href="../voyages/voyages/voyage2.html">Le voyage de Fatima</a>
+          <a href="../voyages/voyages/voyage1.html">Le voyage de Thomas</a>
+          <a href="../voyages/voyages/voyage5.html">Le voyage d'Aurélien</a>
         </div>
       </li>
 
       <li class="deroulant2" style="float:right">
         <a href="javascript:void(0)" class="drop2">Nos rêves</a>
         <div class="contenu-menu2">
-          <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
-          <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
-          <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
+          <a href="../voyages/voyages/voyage4.html">Le voyage de Fatima</a>
+          <a href="../voyages/voyages/voyage3.html">Le voyage de Thomas</a>
+          <a href="../voyages/voyages/voyage6.html">Le voyage d'Aurélien</a>
         </div>
       </li>
     </ul>
@@ -77,7 +77,7 @@
   <footer>
     <div id="tonbou">
       <div class="liens">
-        <button><a href="../voyages/formulaire-voyages.html" style="color: black;">Demande d'informations</a></button>
+        <button><a href="../voyages/voyages/formulaire-voyages.html" style="color: black;">Demande d'informations</a></button>
       </div>
     </div>
   </footer>
