--- a/voyages/voyage1.html
+++ b/voyages/voyage1.html
@@ -11,6 +11,7 @@
     <!--header-->
     <header>
         <ul>
+            <li><a href="../index.html" >   Accueil </a></li>
             <li><a href="#ayutthaya1" style="color: #CE1126;">Ayutthaya</a></li>
             <li><a href="#pataya1" style="color: white;">Pattaya</a></li>
             <li><a href="#repas1" style="color: blue;">Gastronomie</a></li>
