--- a/voyages/voyage2.html
+++ b/voyages/voyage2.html
@@ -16,6 +16,7 @@
     <header>
 
     <ul>
+        <li><a href="../index.html"> Accueil </a></li>
         <li><a href="#paragraphe" style="color: #99f5f5;">Présentation</a></li>
         <li><a href="#galerie" style="color: white;">Galerie</a></li>
         <li><a href="#quefaire" style="color: #3c6dd8;">Activités</a></li>
