--- a/voyages/voyage4.html
+++ b/voyages/voyage4.html
@@ -15,6 +15,7 @@
 
    <header>
       <ul>
+          <li><a href="../index.html">Accueil</a></li>
          <li><a href="#asavoir" style="color: #99f5f5;">Présentation</a></li>
          <li><a href="#imagess" style="color: white;">Spécialités culinaires</a></li>
          <li><a href="#afaire" style="color: #3c6dd8;">Activités</a></li>
