--- a/voyages/voyage5.html
+++ b/voyages/voyage5.html
@@ -13,6 +13,7 @@
 <body>
   <header>
     <ul>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="#cancun1" style="color: #006847;">Cancun</a></li>
       <li><a href="#tulum1" style="color: white;">Tulum</a></li>
       <li><a href="#acapulco1" style="color: #CE1126;">Acapulco</a></li>
