--- a/voyages/voyage6.html
+++ b/voyages/voyage6.html
@@ -13,6 +13,7 @@
 <body>
   <header>
     <ul>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="#conteneur1" style="color: black;">Histoire</a></li>
       <li><a href="#conteneur2" style="color: black;">Pourquoi l'Islande</a></li>
       <li><a href="#islande" style="color: black;">Ce que je ferai</a></li>
