enlever les points

--- a/voyages/voyage3.html
+++ b/voyages/voyage3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Australie</title>
-    <link rel="stylesheet" href="../css/voyage3.css">
+    <link rel="stylesheet" href="css/voyage3.css">
 </head>
 <body>
      <!--header-->
      <header>
         <ul>
-            <li><a href="../index.html"> Accueil </a></li>
+            <li><a href="index.html"> Accueil </a></li>
             <li><a href="#conteneur4.0" style="color: blue;">Barrière</a></li>
             <li><a href="#conteneur5.0" style="color: white;">National Park</a></li>
             <li><a href="#conteneur7.0" style="color: #CE1126;">Kangarou Island</a></li>
@@ -20,9 +20,9 @@
                 <a href="javascript:void(0)" class="drop1">Nos voyages</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu1">
-                    <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
-                    <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
-                    <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
+                    <a href="voyages/voyage2.html">Le voyage de Fatima</a>
+                    <a href="voyages/voyage1.html">Le voyage de Thomas</a>
+                    <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
     
@@ -30,9 +30,9 @@
                 <a href="javascript:void(0)" class="drop2">Nos rêves</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu2">
-                    <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
-                    <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
-                    <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
+                    <a href="voyages/voyage4.html">Le voyage de Fatima</a>
+                    <a href="voyages/voyage3.html">Le voyage de Thomas</a>
+                    <a href="voyages/voyage6.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
         </ul>
