--- a/voyages/voyage6.html
+++ b/voyages/voyage6.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/voyage6.css">
+  <link rel="stylesheet" href="css/voyage6.css">
   <title>Islande</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -13,7 +13,7 @@
 <body>
   <header>
     <ul>
-      <li><a href="../index.html">Accueil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li><a href="#conteneur1" style="color: black;">Histoire</a></li>
       <li><a href="#conteneur2" style="color: black;">Pourquoi l'Islande</a></li>
       <li><a href="#islande" style="color: black;">Ce que je ferai</a></li>
