--- a/voyages/voyage1.html
+++ b/voyages/voyage1.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thaïlande</title>
-    <link rel="stylesheet" href="../css/voyage1.css">
+    <link rel="stylesheet" href="css/voyage1.css">
 </head>
 <body>
     <!--header-->
     <header>
         <ul>
-            <li><a href="../index.html" >   Accueil </a></li>
+            <li><a href="index.html" >   Accueil </a></li>
             <li><a href="#ayutthaya1" style="color: #CE1126;">Ayutthaya</a></li>
             <li><a href="#pataya1" style="color: white;">Pattaya</a></li>
             <li><a href="#repas1" style="color: blue;">Gastronomie</a></li>
@@ -19,9 +19,9 @@
                 <a href="javascript:void(0)" class="drop1">Nos voyages</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu1">
-                    <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
-                    <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
-                    <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
+                    <a href="voyages/voyage2.html">Le voyage de Fatima</a>
+                    <a href="voyages/voyage1.html">Le voyage de Thomas</a>
+                    <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
     
@@ -29,9 +29,9 @@
                 <a href="javascript:void(0)" class="drop2">Nos rêves</a>
                 <i class="fas fa-chevron-down"></i>
                 <div class="contenu-menu2">
-                    <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
-                    <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
-                    <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
+                    <a href="voyages/voyage4.html">Le voyage de Fatima</a>
+                    <a href="voyages/voyage3.html">Le voyage de Thomas</a>
+                    <a href="voyages/voyage6.html">Le voyage d'Aurélien</a>
                 </div>
             </li>
         </ul>
