--- a/voyages/voyage4.html
+++ b/voyages/voyage4.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/voyage4.css">
+    <link rel="stylesheet" href="css/voyage4.css">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
@@ -15,7 +15,7 @@
 
    <header>
       <ul>
-          <li><a href="../index.html">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
          <li><a href="#asavoir" style="color: #99f5f5;">Présentation</a></li>
          <li><a href="#imagess" style="color: white;">Spécialités culinaires</a></li>
          <li><a href="#afaire" style="color: #3c6dd8;">Activités</a></li>
@@ -23,9 +23,9 @@
              <a href="javascript:void(0)" class="drop1">Nos voyages</a>
              <i class="fas fa-chevron-down"></i>
              <div class="contenu-menu1">
-                <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
-                <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
-                <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
+                <a href="voyages/voyage2.html">Le voyage de Fatima</a>
+                <a href="voyages/voyage1.html">Le voyage de Thomas</a>
+                <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
              </div>
          </li>
  
@@ -33,9 +33,9 @@
              <a href="javascript:void(0)" class="drop2">Nos rêves</a>
              <i class="fas fa-chevron-down"></i>
              <div class="contenu-menu2">
-                <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
-                <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
-                <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
+                <a href="voyages/voyage4.html">Le voyage de Fatima</a>
+                <a href="voyages/voyage3.html">Le voyage de Thomas</a>
+                <a href="voyages/voyage6.html">Le voyage d'Aurélien</a>
              </div>
          </li>
      </ul>
