--- a/voyages/voyage5.html
+++ b/voyages/voyage5.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/voyage5.css">
+  <link rel="stylesheet" href="css/voyage5.css">
   <title>Voyages</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -13,7 +13,7 @@
 <body>
   <header>
     <ul>
-      <li><a href="../index.html">Accueil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li><a href="#cancun1" style="color: #006847;">Cancun</a></li>
       <li><a href="#tulum1" style="color: white;">Tulum</a></li>
       <li><a href="#acapulco1" style="color: #CE1126;">Acapulco</a></li>
@@ -21,9 +21,9 @@
         <a href="javascript:void(0)" class="drop1">Nos voyages</a>
         <i class="fas fa-chevron-down"></i>
         <div class="contenu-menu1">
-          <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
-          <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
-          <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
+          <a href="voyages/voyage2.html">Le voyage de Fatima</a>
+          <a href="voyages/voyage1.html">Le voyage de Thomas</a>
+          <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
         </div>
       </li>
 
