remmettre les points et changer lesliens des images

--- a/voyages/voyage5.html
+++ b/voyages/voyage5.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/voyage5.css">
+  <link rel="stylesheet" href="../css/voyage5.css">
   <title>Voyages</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -13,7 +13,7 @@
 <body>
   <header>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="#cancun1" style="color: #006847;">Cancun</a></li>
       <li><a href="#tulum1" style="color: white;">Tulum</a></li>
       <li><a href="#acapulco1" style="color: #CE1126;">Acapulco</a></li>
@@ -21,9 +21,9 @@
         <a href="javascript:void(0)" class="drop1">Nos voyages</a>
         <i class="fas fa-chevron-down"></i>
         <div class="contenu-menu1">
-          <a href="voyages/voyage2.html">Le voyage de Fatima</a>
-          <a href="voyages/voyage1.html">Le voyage de Thomas</a>
-          <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
+          <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
+          <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
+          <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
         </div>
       </li>
 
@@ -80,22 +80,22 @@
       </div>
       <div class="pintores-photos">
         <figure>
-          <img src="../pintores1.png" />
-          <img src="../pintores2.png" />
-          <img src="../pintores3.png" />
-          <img src="../pintores4.png" />
-          <img src="../pintores1.png" />
+          <img src="../images/pintores1.png" />
+          <img src="../images/pintores2.png" />
+          <img src="../images/pintores3.png" />
+          <img src="../images/pintores4.png" />
+          <img src="../images/pintores1.png" />
         </figure>
       </div>
     </div>
     <div id="cancun3">
       <div class="zona-photos">
         <figure>
-          <img src="../zona1.png" />
-          <img src="../zona2.png" />
-          <img src="../zona3.png" />
-          <img src="../zona4.png" />
-          <img src="../zona1.png" />
+          <img src="../images/zona1.png" />
+          <img src="../images/zona2.png" />
+          <img src="../images/zona3.png" />
+          <img src="../images/zona4.png" />
+          <img src="../images/zona1.png" />
         </figure>
       </div>
       <div class="zona-hotelera">
@@ -109,11 +109,11 @@
     <div id="cancun4">
       <div class="mujeres-photos">
         <figure>
-          <img src="../mujeres1.png" />
-          <img src="../mujeres2.png" />
-          <img src="../mujeres3.png" />
-          <img src="../mujeres4.png" />
-          <img src="../mujeres1.png" />
+          <img src="../images/mujeres1.png" />
+          <img src="../images/mujeres2.png" />
+          <img src="../images/mujeres3.png" />
+          <img src="../images/mujeres4.png" />
+          <img src="../images/mujeres1.png" />
         </figure>
       </div>
       <div class="mujeres">
@@ -129,22 +129,22 @@
       </div>
       <div class="mujeres-photos2">
         <figure>
-          <img src="../mujeres5.png" />
-          <img src="../mujeres6.png" />
-          <img src="../mujeres7.png" />
-          <img src="../mujeres8.png" />
-          <img src="../mujeres5.png" />
+          <img src="../images/mujeres5.png" />
+          <img src="../images/mujeres6.png" />
+          <img src="../images/mujeres7.png" />
+          <img src="../images/mujeres8.png" />
+          <img src="../images/mujeres5.png" />
         </figure>
       </div>
     </div>
     <div id="cancun5">
       <div class="carmen-photos">
         <figure>
-          <img src="../carmen1.png" />
-          <img src="../carmen3.png" />
-          <img src="../carmen4.png" />
-          <img src="../carmen5.png" />
-          <img src="../carmen1.png" />
+          <img src="../images/carmen1.png" />
+          <img src="../images/carmen3.png" />
+          <img src="../images/carmen4.png" />
+          <img src="../images/carmen5.png" />
+          <img src="../images/carmen1.png" />
         </figure>
       </div>
       <div class="carmen">
@@ -158,11 +158,11 @@
       </div>
       <div class="carmen-photos2">
         <figure>
-          <img src="../carmen6.png" />
-          <img src="../carmen7.png" />
-          <img src="../carmen8.png" />
-          <img src="../carmen9.png" />
-          <img src="../carmen6.png" />
+          <img src="../images/carmen6.png" />
+          <img src="../images/carmen7.png" />
+          <img src="../images/carmen8.png" />
+          <img src="../images/carmen9.png" />
+          <img src="../images/carmen6.png" />
         </figure>
       </div>
     </div>
@@ -209,29 +209,29 @@
     <div id="tulum4">
       <div class="tulum-photos2">
         <figure>
-          <img src="../tulum6.JPG" />
-          <img src="../tulum7.JPG" />
-          <img src="../tulum8.JPG" />
-          <img src="../tulum17.JPG" />
-          <img src="../tulum6.JPG" />
+          <img src="../images/tulum6.JPG" />
+          <img src="../images/tulum7.JPG" />
+          <img src="../images/tulum8.JPG" />
+          <img src="../images/tulum17.JPG" />
+          <img src="../images/tulum6.JPG" />
         </figure>
       </div>
       <div class="tulum-photos3">
         <figure>
-          <img src="../tulum9.JPG" />
-          <img src="../tulum10.JPG" />
-          <img src="../tulum11.JPG" />
-          <img src="../tulum12.JPG" />
-          <img src="../tulum9.JPG" />
+          <img src="../images/tulum9.JPG" />
+          <img src="../images/tulum10.JPG" />
+          <img src="../images/tulum11.JPG" />
+          <img src="../images/tulum12.JPG" />
+          <img src="../images/tulum9.JPG" />
         </figure>
       </div>
       <div class="tulum-photos4">
         <figure>
-          <img src="../tulum13.JPG" />
-          <img src="../tulum14.JPG" />
-          <img src="../tulum15.JPG" />
-          <img src="../tulum16.JPG" />
-          <img src="../tulum13.JPG" />
+          <img src="../images/tulum13.JPG" />
+          <img src="../images/tulum14.JPG" />
+          <img src="../images/tulum15.JPG" />
+          <img src="../images/tulum16.JPG" />
+          <img src="../images/tulum13.JPG" />
         </figure>
       </div>
     </div>
@@ -274,11 +274,11 @@
       </div>
       <div class="acapulco-photos">
         <figure>
-          <img src="../acapulco1.png" />
-          <img src="../acapulco3.png" />
-          <img src="../acapulco4.jpg" />
-          <img src="../acapulco5.jpg" />
-          <img src="../acapulco1.png" />
+          <img src="../images/acapulco1.png" />
+          <img src="../images/acapulco3.png" />
+          <img src="../images/acapulco4.jpg" />
+          <img src="../images/acapulco5.jpg" />
+          <img src="../images/acapulco1.png" />
         </figure>
       </div>
     </div>
