--- a/voyages/voyage6.html
+++ b/voyages/voyage6.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/voyage6.css">
+  <link rel="stylesheet" href="../css/voyage6.css">
   <title>Islande</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -13,7 +13,7 @@
 <body>
   <header>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="#conteneur1" style="color: black;">Histoire</a></li>
       <li><a href="#conteneur2" style="color: black;">Pourquoi l'Islande</a></li>
       <li><a href="#islande" style="color: black;">Ce que je ferai</a></li>
@@ -30,18 +30,18 @@
       <li class="deroulant1" style="float:right">
         <a href="javascript:void(0)" class="drop1" style="color: black;">Nos voyages</a>
         <div class="contenu-menu1">
-          <a href="voyage2.html">Le voyage de Fatima</a>
-          <a href="voyage1.html">Le voyage de Thomas</a>
-          <a href="voyage5.html">Le voyage d'Aurélien</a>
+          <a href="../voyages/voyage2.html">Le voyage de Fatima</a>
+          <a href="../voyages/voyage1.html">Le voyage de Thomas</a>
+          <a href="../voyages/voyage5.html">Le voyage d'Aurélien</a>
         </div>
       </li>
 
       <li class="deroulant2" style="float:right">
         <a href="javascript:void(0)" class="drop2" style="color: black;">Nos rêves</a>
         <div class="contenu-menu2">
-          <a href="voyage4.html">Le voyage de Fatima</a>
-          <a href="voyage3.html">Le voyage de Thomas</a>
-          <a href="voyage6.html">Le voyage d'Aurélien</a>
+          <a href="../voyages/voyage4.html">Le voyage de Fatima</a>
+          <a href="../voyages/voyage3.html">Le voyage de Thomas</a>
+          <a href="../voyages/voyage6.html">Le voyage d'Aurélien</a>
         </div>
       </li>
     </ul>
@@ -98,7 +98,7 @@
           la république.</p>
       </div>
       <div class="boite3">
-        <img src="../mapislande.jpg" />
+        <img src="../images/mapislande.jpg" />
       </div>
     </div>
     <div id="conteneur2">
@@ -135,22 +135,22 @@
       </div>
       <div class="lagune-photos">
         <figure>
-          <img src="../lagune1.png" />
-          <img src="../lagune2.png" />
-          <img src="../lagune3.png" />
-          <img src="../lagune4.png" />
-          <img src="../lagune1.png" />
+          <img src="../images/lagune1.png" />
+          <img src="../images/lagune2.png" />
+          <img src="../images/lagune3.png" />
+          <img src="../images/lagune4.png" />
+          <img src="../images/lagune1.png" />
         </figure>
       </div>
     </div>
     <div id="islande2">
       <div class="cercle-photos">
         <figure>
-          <img src="../cercle1.png" />
-          <img src="../cercle2.png" />
-          <img src="../cercle3.png" />
-          <img src="../cercle4.png" />
-          <img src="../cercle1.png" />
+          <img src="../images/cercle1.png" />
+          <img src="../images/cercle2.png" />
+          <img src="../images/cercle3.png" />
+          <img src="../images/cercle4.png" />
+          <img src="../images/cercle1.png" />
         </figure>
       </div>
       <div class="cercle">
@@ -160,10 +160,10 @@
     <div id="islande3">
       <p>La faille de Silfra</p>
       <div class="silfra">
-        <img src="../silfra1.png">
-        <img src="../silfra2.png">
-        <img src="../silfra3.png">
-        <img src="../silfra4.png">
+        <img src="../images/silfra1.png">
+        <img src="../images/silfra2.png">
+        <img src="../images/silfra3.png">
+        <img src="../images/silfra4.png">
       </div>
     </div>
     <div id="islande4">
@@ -172,22 +172,22 @@
       </div>
       <div class="myvatn-photos">
         <figure>
-          <img src="../myvatn1.png" />
-          <img src="../myvatn2.png" />
-          <img src="../myvatn3.png" />
-          <img src="../myvatn4.png" />
-          <img src="../myvatn1.png" />
+          <img src="../images/myvatn1.png" />
+          <img src="../images/myvatn2.png" />
+          <img src="../images/myvatn3.png" />
+          <img src="../images/myvatn4.png" />
+          <img src="../images/myvatn1.png" />
         </figure>
       </div>
     </div>
     <div id="islande5">
       <div class="volcan-photos">
         <figure>
-          <img src="../volcan1.png" />
-          <img src="../volcan2.png" />
-          <img src="../volcan3.png" />
-          <img src="../volcan4.png" />
-          <img src="../volcan1.png" />
+          <img src="../images/volcan1.png" />
+          <img src="../images/volcan2.png" />
+          <img src="../images/volcan3.png" />
+          <img src="../images/volcan4.png" />
+          <img src="../images/volcan1.png" />
         </figure>
       </div>
       <div class="volcan">
@@ -197,31 +197,31 @@
     <div id="islande6">
       <p>Les chutes de Dettifoss</p>
       <div class="chutes">
-        <img src="../chutes1.png">
-        <img src="../chutes2.png">
-        <img src="../chutes3.png">
-        <img src="../chutes4.png">
+        <img src="../images/chutes1.png">
+        <img src="../images/chutes2.png">
+        <img src="../images/chutes3.png">
+        <img src="../images/chutes4.png">
       </div>
     </div>
     <div id="islande7">
       <div class="cascade-photos">
         <p>La Cascade de Skogafoss</p>
         <figure>
-          <img src="../cascade1.png" />
-          <img src="../cascade2.png" />
-          <img src="../cascade3.png" />
-          <img src="../cascade4.png" />
-          <img src="../cascade1.png" />
+          <img src="../images/cascade1.png" />
+          <img src="../images/cascade2.png" />
+          <img src="../images/cascade3.png" />
+          <img src="../images/cascade4.png" />
+          <img src="../images/cascade1.png" />
         </figure>
       </div>
       <div class="cascade2-photos">
         <p>La Cascade de Seljalandsfoss</p>
         <figure>
-          <img src="../cascade21.png" />
-          <img src="../cascade22.png" />
-          <img src="../cascade23.png" />
-          <img src="../cascade24.png" />
-          <img src="../cascade21.png" />
+          <img src="../images/cascade21.png" />
+          <img src="../images/cascade22.png" />
+          <img src="../images/cascade23.png" />
+          <img src="../images/cascade24.png" />
+          <img src="../images/cascade21.png" />
         </figure>
       </div>
     </div>
@@ -231,22 +231,22 @@
       </div>
       <div class="cities-photos">
         <figure>
-          <img src="../husavik1.png" />
-          <img src="../husavik2.png" />
-          <img src="../akureyri1.png" />
-          <img src="../akureyri2.png" />
-          <img src="../husavik1.png" />
+          <img src="../images/husavik1.png" />
+          <img src="../images/husavik2.png" />
+          <img src="../images/akureyri1.png" />
+          <img src="../images/akureyri2.png" />
+          <img src="../images/husavik1.png" />
         </figure>
       </div>
     </div>
     <div id="islande9">
       <div class="fjord-photos">
         <figure>
-          <img src="../fjord1.png" />
-          <img src="../fjord2.png" />
-          <img src="../fjord3.png" />
-          <img src="../fjord4.png" />
-          <img src="../fjord1.png" />
+          <img src="../images/fjord1.png" />
+          <img src="../images/fjord2.png" />
+          <img src="../images/fjord3.png" />
+          <img src="../images/fjord4.png" />
+          <img src="../images/fjord1.png" />
         </figure>
       </div>
       <div class="fjord">
@@ -256,10 +256,10 @@
     <div id="islande10">
       <p>Réserve Naturelle de Skaftafell</p>
       <div class="skaf">
-        <img src="../skaf1.png">
-        <img src="../skaf2.png">
-        <img src="../skaf3.png">
-        <img src="../skaf4.png">
+        <img src="../images/skaf1.png">
+        <img src="../images/skaf2.png">
+        <img src="../images/skaf3.png">
+        <img src="../images/skaf4.png">
       </div>
     </div>
   </main>
