--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <ul>
       <li class="europe" style="float:left">
         <a href="javascript:void(0)" class="europe1">Europe</a>
-        <div class="contenu-europe">
-          <a href="../voyages/voyages/voyage6.html">Islande</a>
+        <div class="contenu-europe">  
+          <a href="voyages/voyage6.html">Islande</a>
         </div>
       </li>
       <li class="afrique" style="float:left">
