liens changer index

--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
       <li class="europe" style="float:left">
         <a href="javascript:void(0)" class="europe1">Europe</a>
         <div class="contenu-europe">
-          <a href="../voyages/voyages/voyage6.html">Islande</a>
+          <a href="voyages/voyage6.html">Islande</a>
         </div>
       </li>
       <li class="afrique" style="float:left">
         <a href="javascript:void(0)" class="afrique1">Afrique</a>
         <div class="contenu-afrique">
-          <a href="../voyages/voyages/voyage2.html">Maroc</a>
+          <a href="voyages/voyage2.html">Maroc</a>
         </div>
       </li>
       <li class="amerique" style="float:left">
         <a href="javascript:void(0)" class="amerique1">Amérique</a>
         <div class="contenu-amerique">
-          <a href="../voyages/voyages/voyage5.html">Mexique</a>
+          <a href="voyages/voyage5.html">Mexique</a>
         </div>
       </li>
       <li class="asie" style="float:left">
         <a href="javascript:void(0)" class="asie1">Asie</a>
         <div class="contenu-asie">
-          <a href="../voyages/voyages/voyage4.html">Maldives</a>
-          <a href="../voyages/voyages/voyage1.html">Thaïlande</a>
+          <a href="voyages/voyage4.html">Maldives</a>
+          <a href="voyages/voyage1.html">Thaïlande</a>
         </div>
       </li>
       <li class="oceanie" style="float:left">
         <a href="javascript:void(0)" class="oceanie1">Océanie</a>
         <div class="contenu-oceanie">
-          <a href="../voyages/voyages/voyage3.html">Australie</a>
+          <a href="voyages/voyage3.html">Australie</a>
         </div>
       </li>
       <li class="deroulant1" style="float:right">
         <a href="javascript:void(0)" class="drop1">Nos voyages</a>
         <div class="contenu-menu1">
-          <a href="../voyages/voyages/voyage2.html">Le voyage de Fatima</a>
-          <a href="../voyages/voyages/voyage1.html">Le voyage de Thomas</a>
-          <a href="../voyages/voyages/voyage5.html">Le voyage d'Aurélien</a>
+          <a href="voyages/voyage2.html">Le voyage de Fatima</a>
+          <a href="voyages/voyage1.html">Le voyage de Thomas</a>
+          <a href="voyages/voyage5.html">Le voyage d'Aurélien</a>
         </div>
       </li>
 
       <li class="deroulant2" style="float:right">
         <a href="javascript:void(0)" class="drop2">Nos rêves</a>
         <div class="contenu-menu2">
-          <a href="../voyages/voyages/voyage4.html">Le voyage de Fatima</a>
-          <a href="../voyages/voyages/voyage3.html">Le voyage de Thomas</a>
-          <a href="../voyages/voyages/voyage6.html">Le voyage d'Aurélien</a>
+          <a href="voyages/voyage4.html">Le voyage de Fatima</a>
+          <a href="voyages/voyage3.html">Le voyage de Thomas</a>
+          <a href="voyages/voyage6.html">Le voyage d'Aurélien</a>
         </div>
       </li>
     </ul>
@@ -77,7 +77,7 @@
   <footer>
     <div id="tonbou">
       <div class="liens">
-        <button><a href="../voyages/voyages/formulaire-voyages.html" style="color: black;">Demande d'informations</a></button>
+        <button><a href="voyages/formulaire-voyages.html" style="color: black;">Demande d'informations</a></button>
       </div>
     </div>
   </footer>
